--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "jsonwebtoken": "^9.0.2",
     "next": "15.2.1",
     "next-auth": "^4.24.11",
+    "nodemailer": "^6.10.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-toastify": "^11.0.5",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -27,6 +29,7 @@
     "@tailwindcss/postcss": "^4.0.10",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
